--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,10 @@
 		<version>2.4.1</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.programming.techie</groupId>
-	<artifactId>spring-boot-mongodb-tutorial</artifactId>
+	<groupId>com.usal.demo</groupId>
+	<artifactId>spring-boot-mongodb-</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>spring-boot-mongodb-tutorial</name>
+	<name>spring-boot-mongodb</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
