--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-core -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-core</artifactId>
+			<version>1.2.9.RELEASE</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.projectlombok</groupId>
